# molrs

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
molrs/: Cargo.toml
molrs-capi/: Cargo.toml
molrs-capi/src/: error.rs  forcefield.rs  frame.rs  lib.rs  simbox.rs  store.rs
molrs-compute/: Cargo.toml  README.md
molrs-compute/benches/: benchmarks.rs  center_of_mass.rs  cluster_centers.rs  dielectric.rs  graph.rs  gyration_tensor.rs  helpers.rs  inertia_tensor.rs  msd.rs  radius_of_gyration.rs  rdf.rs  spectra.rs
molrs-compute/src/: center_of_mass.rs  cluster_centers.rs  dielectric.rs  error.rs  gyration_tensor.rs  inertia_tensor.rs  jacf.rs  lib.rs  onsager.rs  persist.rs  radius_of_gyration.rs  result.rs  traits.rs  util.rs  validate.rs
molrs-compute/src/cluster/: mod.rs  properties.rs  result.rs
molrs-compute/src/density/: correlation_function.rs  gaussian_density.rs  local_density.rs  mod.rs  sphere_voxelization.rs
molrs-compute/src/diffraction/: debye.rs  diffraction_pattern.rs  direct.rs  mod.rs
molrs-compute/src/environment/: angular_separation.rs  bond_order.rs  local_bond_projection.rs  local_descriptors.rs  match_env.rs  mod.rs
molrs-compute/src/graph/: inputs.rs  mod.rs  topo.rs
molrs-compute/src/kmeans/: mod.rs
molrs-compute/src/msd/: mod.rs  result.rs
molrs-compute/src/order/: continuous_coordination.rs  cubatic.rs  hexatic.rs  mod.rs  nematic.rs  rotational_autocorrelation.rs  solid_liquid.rs  steinhardt.rs
molrs-compute/src/pca/: mod.rs
molrs-compute/src/pmft/: mod.rs  r12.rs  xy.rs  xyt.rs  xyz.rs
molrs-compute/src/rdf/: mod.rs  result.rs
molrs-compute/src/spectra/: ir_spectrum.rs  mod.rs  power_spectrum.rs  raman_spectrum.rs
molrs-compute/tests/: compute.rs  graph_tests.rs
molrs-compute/tests/compute/: center_of_mass.rs  msd.rs  rdf.rs
molrs-conformer/: Cargo.toml
molrs-conformer/src/: builder.rs  distance_geometry.rs  fragment_data.rs  geom.rs  graph.rs  lib.rs  optimizer.rs  pipeline.rs  report.rs  rotor_search.rs  stereo_guard.rs
molrs-conformer/src/etkdg/: etmin.rs  (+4 more)
molrs-conformer/tests/: embed.rs
molrs-core/: CMakeLists.txt  Cargo.toml  build.rs
molrs-core/benches/: benchmarks.rs  helpers.rs
molrs-core/cpp/: device_runtime.cpp
molrs-core/cuda/: angle_harmonic.cu  bond_harmonic.cu  common.cuh  neighborlist.cu  pair_lj126.cu  reduce.cu  simbox_gpu.cu
molrs-core/examples/: molgraph_analysis.rs  molgraph_building.rs  molgraph_transforms.rs
molrs-core/include/: molrs_core.h
molrs-core/src/: aromaticity.rs  atomistic.rs  coarsegrain.rs  entity_table.rs  error.rs  field.rs  frame.rs  frame_access.rs  frame_view.rs  gasteiger.rs  geometry.rs  grid.rs  hydrogens.rs  keys.rs  lib.rs  mapping.rs  molgraph.rs  molrec.rs  rings.rs  rotatable.rs  stereo.rs  topology.rs
molrs-core/tests/: core.rs  reproduce_wasm.rs  test_data.rs  test_gen3d.rs  test_hydrogens.rs  test_io.rs  test_rings.rs  test_stereo.rs  test_units.rs
molrs-cxxapi/: Cargo.toml  build.rs
molrs-cxxapi/src/: bridge.rs  lib.rs
molrs-embed/: Cargo.toml
molrs-embed/src/: builder.rs  distance_geometry.rs  fragment_data.rs  lib.rs  optimizer.rs  options.rs  pipeline.rs  report.rs  rotor_search.rs  stereo_guard.rs
molrs-embed/tests/: embed.rs  test_embed.rs
molrs-ff/: Cargo.toml
molrs-ff/examples/: forcefield.rs  typify_litfsi.rs  typify_molecule.rs
molrs-ff/src/: lib.rs  molrec_ext.rs
molrs-ff/tests/: ff.rs
molrs-ffi/: Cargo.toml
molrs-ffi/src/: error.rs  forcefield.rs  handle.rs  lib.rs  shared.rs  store.rs
molrs-io/: Cargo.toml
molrs-io/src/: chgcar.rs  cif.rs  cube.rs  dcd.rs  gro.rs  lammps_data.rs  lammps_dump.rs  lib.rs  mol2.rs  pdb.rs  poscar.rs  sdf.rs  xyz.rs
molrs-io/tests/: io.rs  test_io.rs
molrs-md/: Cargo.toml  build.rs
molrs-md/benches/: cpu_bench.rs
molrs-md/examples/: tip3p.rs  tip3p_gpu.rs
molrs-md/src/: backend.rs  error.rs  lib.rs  md.rs
molrs-md/tests/: cpu_dynamics.rs  cpu_minimizer.rs
molrs-pack/: Cargo.toml  README.md
molrs-pack/benches/: evaluate_unscaled.rs  objective_dispatch.rs  pack_end_to_end.rs  run_iteration.rs
molrs-pack/docs/: packmol_alignment.md
molrs-pack/src/: cases.rs  cell.rs  constraint.rs  error.rs  euler.rs  frame.rs  handler.rs  hook.rs  initial.rs  lib.rs  movebad.rs  numerics.rs  objective.rs  packer.rs  random.rs  region.rs  relaxer.rs  target.rs  validation.rs
molrs-pack/tests/: constraint.rs  euler.rs  examples_batch.rs  gradient.rs  hook.rs  packer.rs  relaxer.rs  target.rs
molrs-python/: Cargo.toml  README.md  pyproject.toml  zensical.toml
molrs-python/docs/: zensical.toml
molrs-python/examples/: embed_water.py  forcefield_ethane.py  full_pipeline.py
molrs-python/site-src/: changelog.md
molrs-python/src/: block.rs  compute.rs  compute_extra.rs  compute_fit.rs  compute_travis.rs  conformer.rs  constraint.rs  dielectric.rs  embed.rs  error.rs  forcefield.rs  frame.rs  gen3d.rs  helpers.rs  io.rs  lib.rs  linkedcell.rs  molgraph.rs  molrec.rs  packer.rs  region.rs  signal.rs  simbox.rs  store.rs  target.rs  transport.rs  validate.rs
molrs-python/tests/: conftest.py  test_block.py  test_block_dtype_contract.py  test_box.py  test_compute_extra.py  test_dcd.py  test_dielectric.py  test_ecs_pybind.py  test_fit_repoint.py  test_forcefield_builder.py  test_forcefield_lammps_reader.py  test_forcefield_subset.py  test_frame.py  test_io.py  test_io_gmx.py  test_io_returns_rich_frame.py  test_io_traj.py  test_opls_typifier.py  test_packer.py  test_rich_frame.py  test_signal.py  test_subclass.py
molrs-signal/: Cargo.toml
molrs-signal/src/: acf.rs  grid.rs  lib.rs  window.rs
molrs-wasm/: Cargo.toml  README.md
molrs-wasm/src/: compute.rs  conformer.rs  embed.rs  gen3d.rs  lib.rs  smiles.rs
molrs/data/: gaff_empirical.json  gaff_equiv.json  mmff94.xml  mmff94s.xml  oplsaa.xml
molrs/examples/: forcefield.rs  molgraph_analysis.rs  molgraph_building.rs  molgraph_transforms.rs  typify_litfsi.rs  typify_molecule.rs
molrs/src/: lib.rs
molrs/tests/: compute.rs  core.rs  facade.rs  ff.rs  io.rs  signal.rs  test_units.rs
(+1113 files in other folders)
