[workspace]
members = [
    "molrs",
    "molrs-core",
    "molrs-io",
    "molrs-compute",
    "molrs-ff",
    "molrs-conformer",
    "molrs-cxxapi",
    "molrs-signal",
]
# molrs-ffi declares its own `[workspace]` (it is a standalone crate shared by
# molrs-python and molrs-cxxapi). It is a path dependency of molrs-cxxapi but
# must not be folded into this workspace — exclude it so cargo treats it as a
# separate workspace root.
exclude = ["molrs-ffi"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
license = "BSD-3-Clause"
authors = ["MolCrafts"]
repository = "https://github.com/MolCrafts/molrs"
homepage = "https://github.com/MolCrafts/molrs"

# Internal crate aliases. The LHS is the extern crate name used inside
# workspace members (e.g. `use molrs::Frame`). The `package =` field points to
# the actual crates.io name.
[workspace.dependencies]
molrs         = { path = "molrs-core",    version = "0.1.0", package = "molcrafts-molrs-core", default-features = false }
molrs_io      = { path = "molrs-io",      version = "0.1.0", package = "molcrafts-molrs-io" }
molrs_compute = { path = "molrs-compute", version = "0.1.0", package = "molcrafts-molrs-compute" }
molrs_ff      = { path = "molrs-ff",      version = "0.1.0", package = "molcrafts-molrs-ff" }
molrs_conformer = { path = "molrs-conformer", version = "0.1.0", package = "molcrafts-molrs-conformer" }
molrs_cxxapi  = { path = "molrs-cxxapi",  version = "0.1.0", package = "molcrafts-molrs-cxxapi" }
molrs_signal  = { path = "molrs-signal", version = "0.1.0", package = "molcrafts-molrs-signal" }

[profile.release]
lto = "thin"
codegen-units = 1
