[workspace]
members = [
    "molrs",
    "molrs-cxxapi",
]
# molrs-ffi declares its own `[workspace]` (it is a standalone crate shared by
# molrs-python and molrs-cxxapi). It is a path dependency of molrs-cxxapi but
# must not be folded into this workspace — exclude it so cargo treats it as a
# separate workspace root.
exclude = ["molrs-ffi"]
resolver = "3"

[workspace.package]
version = "0.1.3"
edition = "2024"
rust-version = "1.91"
license = "BSD-3-Clause"
authors = ["MolCrafts"]
repository = "https://github.com/MolCrafts/molrs"
homepage = "https://github.com/MolCrafts/molrs"

# The merged crate. Binders (molrs-cxxapi here, plus the excluded molrs-ffi /
# molrs-wasm / molrs-python) depend on it directly with the features they need.
[workspace.dependencies]
molcrafts-molrs = { path = "molrs", version = "0.1.3", default-features = false }

[profile.release]
lto = "thin"
codegen-units = 1
