[workspace]
members = [
    "molrs",
    "molrs-cxxapi",
]
# molrs-ffi declares its own `[workspace]` (it is a standalone crate shared by
# molrs-python and molrs-cxxapi). It is a path dependency of molrs-cxxapi but
# must not be folded into this workspace — exclude it so cargo treats it as a
# separate workspace root.
exclude = ["molrs-ffi"]
resolver = "3"

[workspace.package]
# BREAKING (compute-fit-03-cleanup): removed the bundled conductivity result
# fields + free functions (ConductivityResult sigma/slope/fit_start/fit_end +
# einstein_helfand_conductivity; JacfResult sigma/sigma_running +
# green_kubo_conductivity), converted onsager/power/ir/raman free fns to OOP
# Compute structs, and relocated the spectral window+FFT helpers into
# compute::fit. Pre-1.0 SemVer: minor bump = breaking. Downstream exact-pins
# (molpack, molpy) MUST update their molcrafts-molrs pin to ^0.2 before this
# is published. Do NOT publish/tag from this change.
version = "0.1.5"
edition = "2024"
rust-version = "1.91"
license = "BSD-3-Clause"
authors = ["MolCrafts"]
repository = "https://github.com/MolCrafts/molrs"
homepage = "https://github.com/MolCrafts/molrs"

# The merged crate. Binders (molrs-cxxapi here, plus the excluded molrs-ffi /
# molrs-wasm / molrs-python) depend on it directly with the features they need.
[workspace.dependencies]
molcrafts-molrs = { path = "molrs", version = "0.1.5", default-features = false }

[profile.release]
lto = "thin"
codegen-units = 1
