[package]
name = "molcrafts-molrs-capi"
version = "0.0.15"
edition = "2024"
authors = ["MolCrafts"]
license = "BSD-3-Clause"
description = "C API for molrs, enabling C/C++ integration"
repository = "https://github.com/MolCrafts/molrs"
homepage = "https://github.com/MolCrafts/molrs"

[lib]
name = "molrs_capi"
crate-type = ["cdylib", "staticlib", "lib"]

[workspace]

[features]
default = []
f64 = ["molrs/f64"]
i64 = ["molrs/i64", "molrs-ffi/i64"]
u64 = ["molrs/u64", "molrs-ffi/u64"]

[dependencies]
molrs = { path = "../molrs-core", package = "molcrafts-molrs-core", version = "0.0.15", default-features = false }
molrs-ff = { path = "../molrs-ff", package = "molcrafts-molrs-ff", version = "0.0.15" }
molrs-io = { path = "../molrs-io", package = "molcrafts-molrs-io", version = "0.0.15", features = ["smiles"] }
molrs-ffi = { path = "../molrs-ffi", package = "molcrafts-molrs-ffi", version = "0.0.15" }
slotmap = "1.0"
ndarray = "0.17"
serde_json = "1"

[build-dependencies]
cbindgen = "0.29"
