[package]
name = "molcrafts-molrs-capi"
version = "0.1.3"
edition = "2024"
authors = ["MolCrafts"]
license = "BSD-3-Clause"
description = "C API for molrs, enabling C/C++ integration"
repository = "https://github.com/MolCrafts/molrs"
homepage = "https://github.com/MolCrafts/molrs"

[lib]
name = "molrs_capi"
crate-type = ["cdylib", "staticlib", "lib"]

[workspace]

[features]
default = []

[dependencies]
# The merged crate with the ff + io + smiles modules this C API exposes.
molrs = { path = "../molrs", package = "molcrafts-molrs", version = "0.1.3", default-features = false, features = ["ff", "io", "smiles"] }
molrs-ffi = { path = "../molrs-ffi", package = "molcrafts-molrs-ffi", version = "0.2.0" }
slotmap = "1.0"
ndarray = "0.17"
serde_json = "1"

[build-dependencies]
cbindgen = "0.29"
