[package]
name = "molcrafts-molrs-conformer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "3D conformer generation for MolCrafts molecular modeling"
repository.workspace = true
homepage.workspace = true

[lib]
name = "molrs_conformer"

[dependencies]
molrs = { workspace = true }
molrs_ff = { workspace = true }
ndarray = "0.17"
once_cell = "1.20"
rand = "0.9"

[dev-dependencies]
molrs_io = { workspace = true }
