[package]
name = "molrs-core"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "MolCrafts molecular modeling core library"
homepage = "https://github.com/MolCrafts/molrs"
repository = "https://github.com/MolCrafts/molrs"

[lib]
name = "molrs"

[features]
default = ["rayon"]
cuda = ["dep:cmake", "dep:bindgen"]
slow-tests = []
blas = ["ndarray-linalg"]
rayon = []
zarr = ["dep:zarrs", "dep:serde_json"]
filesystem = ["zarr", "zarrs/filesystem"]
f64 = []

[dependencies]
ndarray = "0.17"
flate2 = { version = "1.0", features = ["rust_backend"] }
rayon = "1.11"
ndarray-linalg = { version = "0.18", optional = true, default-features = true }
rand = "0.9"
wide = "0.7"
once_cell = "1.20"
slotmap = "1"
igraph = { path = "../../igraph-rs/igraph" }
zarrs = { version = "0.23", optional = true, features = ["ndarray"], default-features = false }
serde_json = { version = "1", optional = true }
rustfft = "6"
libm = "0.2"

[build-dependencies]
cmake = { version = "0.1", optional = true }
bindgen = { version = "0.71", optional = true }

[dev-dependencies]
criterion = "0.5"
tempfile = "3.0"

[[bench]]
name = "benchmarks"
harness = false
