[package]
name = "molcrafts-molrs-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "MolCrafts molecular modeling core library"
homepage.workspace = true
repository.workspace = true

[lib]
name = "molrs_core"

[features]
default = ["rayon"]
slow-tests = []
blas = ["ndarray-linalg"]
rayon = []
# Enables From<zarrs::*Error> for MolRsError (used by molrs-io)
zarr = ["dep:zarrs"]
# Deprecated — these features are now no-ops. F/I/U are hardcoded to f64/i32/u32.
f64 = []
i64 = []
u64 = []

[dependencies]
ndarray = "0.17"
rayon = "1.11"
zarrs = { version = "0.23", optional = true, default-features = false }
ndarray-linalg = { version = "0.18", optional = true, default-features = true }
slotmap = "1"
petgraph = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
libm = "0.2"

[dev-dependencies]
criterion = "0.5"
rand = "0.9"
tempfile = "3.0"

[[bench]]
name = "benchmarks"
harness = false
