[package]
name = "molcrafts-molrs-cxxapi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "CXX bridge for Atomiverse C++ integration"
repository.workspace = true
homepage.workspace = true

[lib]
name = "molrs_cxxapi"
crate-type = ["staticlib", "rlib"]

[features]
default = ["zarr"]
zarr = ["molrs/filesystem"]

[dependencies]
# The merged crate, imported under the extern name `molrs`; `io` gives the file
# I/O module this bridge relies on.
molrs = { path = "../molrs", package = "molcrafts-molrs", version = "0.1.6", default-features = false, features = ["io"] }
molrs-ffi = { path = "../molrs-ffi", package = "molcrafts-molrs-ffi", version = "0.1.6" }
cxx = "1"
ndarray = "0.17"

[build-dependencies]
cxx-build = "1"
