[package]
name = "molcrafts-molrs-ff"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Force field stack for MolCrafts molecular modeling (MMFF94, PME, typifier)"
repository.workspace = true
homepage.workspace = true

[lib]
name = "molrs_ff"

[features]
default = ["rayon"]
# Parallel homogeneous batch geometry optimization (molrs-ff::optimize).
rayon = ["dep:rayon"]

[dependencies]
molrs = { workspace = true }
ndarray = "0.17"
rustfft = "6"
roxmltree = "0.20"
serde_json = "1"
libm = "0.2"
rayon = { version = "1.11", optional = true }
