[package]
name = "molcrafts-molrs-ffi"
version = "0.1.6"
edition = "2024"
authors = ["MolCrafts"]
description = "FFI layer for molrs with handle-based abstractions"
license = "BSD-3-Clause"
repository = "https://github.com/MolCrafts/molrs"
homepage = "https://github.com/MolCrafts/molrs"

[lib]
name = "molrs_ffi"

[workspace]

[features]
# Stable handle for `molrs::ff::ForceField` (the `ForceFieldRef` analogue of
# `FrameRef`). Gated because `molrs::ff` is; only force-field consumers
# (e.g. molpack) enable it — wasm / cxxapi / capi do not.
ff = ["molrs/ff"]

[dependencies]
# The merged crate with only its always-on core (default-features = false).
molrs = { path = "../molrs", package = "molcrafts-molrs", version = "0.1.6", default-features = false }
slotmap = "1.0"

[dev-dependencies]
ndarray = "0.17"
