[package]
name = "molcrafts-molrs-io"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "File I/O for MolCrafts molecular modeling (PDB, XYZ, LAMMPS, CHGCAR, CUBE, Zarr)"
repository.workspace = true
homepage.workspace = true

[lib]
name = "molrs_io"

[features]
default = []
smiles = ["dep:petgraph"]
zarr = ["dep:zarrs", "molrs/zarr"]
filesystem = ["zarr", "zarrs/filesystem"]

[dependencies]
molrs = { workspace = true }
ndarray = "0.17"
flate2 = { version = "1.0", features = ["rust_backend"] }
once_cell = "1.20"
serde_json = "1"
petgraph = { version = "0.7", optional = true }
zarrs = { version = "0.23", optional = true, features = ["ndarray"], default-features = false }

[dev-dependencies]
tempfile = "3.0"
