[package]
name = "molrs-pack"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Faithful Rust port of Packmol molecular packing"
repository.workspace = true
homepage.workspace = true

[dependencies]
molrs-core = { path = "../molrs-core", default-features = false }
rand = "0.9"
ndarray = "0.17"
log = "0.4"
env_logger = "0.11"

[features]
default = []
f64 = ["molrs-core/f64"]
filesystem = ["molrs-core/filesystem"]
