[package]
name = "molcrafts-molrs-pack"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Faithful Rust port of Packmol molecular packing"
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/molcrafts-molrs-pack"
readme = "README.md"
keywords = ["packmol", "molecular-modeling", "chemistry", "simulation"]
categories = ["science", "algorithms"]

[lib]
name = "molrs_pack"

[dependencies]
molrs = { path = "../molrs-core", package = "molcrafts-molrs", version = "0.0.7", default-features = false }
molrs_io = { path = "../molrs-io", package = "molcrafts-molrs-io" }
rand = "0.9"
ndarray = "0.17"
log = "0.4"
env_logger = "0.11"
rayon = { version = "1.11", optional = true }

[features]
default = []
rayon = ["dep:rayon", "molrs/rayon"]
f64 = ["molrs/f64"]
i64 = ["molrs/i64"]
u64 = ["molrs/u64"]
filesystem = ["molrs_io/filesystem"]

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "pack_end_to_end"
harness = false

[[bench]]
name = "evaluate_unscaled"
harness = false
