[package]
name = "molrs-python"
version = "0.0.8"
edition = "2024"
rust-version = "1.85"
authors = ["MolCrafts"]
license = "BSD-3-Clause"
description = "Python bindings for molrs molecular simulation library"
repository = "https://github.com/MolCrafts/molrs"
homepage = "https://github.com/MolCrafts/molrs"

[lib]
name = "molrs_python"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
numpy = "0.28"
ndarray = "0.17"
serde_json = "1"
molrs-ffi = { path = "../molrs-ffi", package = "molcrafts-molrs-ffi", version = "0.0.8" }
molrs = { path = "../molrs-core", package = "molcrafts-molrs-core", version = "0.0.8", default-features = false, features = ["zarr"] }
molrs-io = { path = "../molrs-io", package = "molcrafts-molrs-io", version = "0.0.8", default-features = false, features = ["filesystem"] }
molrs-smiles = { path = "../molrs-smiles", package = "molcrafts-molrs-smiles", version = "0.0.8" }
molrs-ff = { path = "../molrs-ff", package = "molcrafts-molrs-ff", version = "0.0.8" }
molrs-compute = { path = "../molrs-compute", package = "molcrafts-molrs-compute", version = "0.0.8", default-features = false }
molrs-gen3d = { path = "../molrs-gen3d", package = "molcrafts-molrs-gen3d", version = "0.0.8" }
molrs-pack = { path = "../molrs-pack", package = "molcrafts-molrs-pack", version = "0.0.8", default-features = false }

[workspace]

[features]
default = []
f64 = ["molrs/f64", "molrs-pack/f64", "molrs-ffi/f64"]
i64 = ["molrs/i64", "molrs-pack/i64", "molrs-ffi/i64"]
u64 = ["molrs/u64", "molrs-pack/u64", "molrs-ffi/u64"]
