[package]
name = "molrs-python"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
authors = ["MolCrafts"]
license = "BSD-3-Clause"
description = "Python bindings for molrs molecular simulation library"
repository = "https://github.com/MolCrafts/molrs"
homepage = "https://github.com/MolCrafts/molrs"

[lib]
name = "molrs_python"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = [
    "extension-module",
    "abi3-py312",
    "multiple-pymethods",
] }
numpy = "0.28"
ndarray = "0.17"
serde_json = "1"
molrs-ffi = { path = "../molrs-ffi", package = "molcrafts-molrs-ffi", version = "0.1.0" }
# The merged crate with every sub-system module (`full`) plus the zarr /
# filesystem / smiles knobs the bindings exercise.
molrs = { path = "../molrs", package = "molcrafts-molrs", version = "0.1.0", features = ["full", "zarr", "filesystem"] }

[workspace]

[features]
default = []
f64 = ["molrs/f64", "molrs-ffi/f64"]
i64 = ["molrs/i64", "molrs-ffi/i64"]
u64 = ["molrs/u64", "molrs-ffi/u64"]
