[package]
name = "molrs-python"
version = "0.1.1"
edition = "2024"
rust-version = "1.91"
authors = ["MolCrafts"]
license = "BSD-3-Clause"
description = "Python bindings for molrs molecular simulation library"
repository = "https://github.com/MolCrafts/molrs"
homepage = "https://github.com/MolCrafts/molrs"

[lib]
name = "molrs_python"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = [
    "extension-module",
    "abi3-py312",
    "multiple-pymethods",
] }
numpy = "0.28"
ndarray = "0.17"
serde_json = "1"
# `ff` exposes `molrs_ffi::ForceFieldRef`, the stable handle behind
# `ForceField._ffi_forcefield_capsule()` (the force-field analogue of the frame
# capsule). molrs-python already pulls `molrs/ff` via `full`, so this only turns
# on the matching molrs-ffi handle.
molrs-ffi = { path = "../molrs-ffi", package = "molcrafts-molrs-ffi", version = "0.1.1", features = ["ff"] }
# The merged crate with every sub-system module (`full`) plus the zarr /
# filesystem / smiles knobs the bindings exercise.
molrs = { path = "../molrs", package = "molcrafts-molrs", version = "0.1.1", features = ["full", "zarr", "filesystem"] }

[workspace]

[features]
default = []
