[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "molcrafts-molrs"
version = "0.1.2"
description = "Python bindings for molrs molecular simulation library"
requires-python = ">=3.12"
readme = "README.md"
license = "BSD-3-Clause"
dependencies = ["numpy>=2.0"]

[project.optional-dependencies]
# Everything `zensical build` needs for the docs site: zensical itself (pulls
# its own deps) plus the mkdocstrings python handler used by zensical.toml's
# `[project.plugins.mkdocstrings]`. Build the site with: pip install ".[doc]"
doc = [
    "zensical",
    "mkdocstrings[python]",
]

[tool.maturin]
python-source = "python"
module-name = "molrs.molrs"
features = ["pyo3/extension-module"]
exclude = [
  "python/molrs/*.so",
  "python/molrs/*.dylib",
  "python/molrs/*.dll",
  "python/molrs/*.dSYM",
  "python/molrs/*.dSYM/**",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
