[package]
name = "molcrafts-molrs-signal"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Signal processing for MolCrafts (FFT-based ACF, window functions, frequency grids)"
repository.workspace = true
homepage.workspace = true
autobenches = false

[lib]
name = "molrs_signal"

[dependencies]
ndarray = "0.17"
rustfft = "6"

[dev-dependencies]
rand = "0.10"
