[package]
name = "molrs"
version = "0.0.6"
edition = "2024"
authors = ["MolCrafts"]
description = "WASM bindings for molrs"
license = "BSD-3-Clause"
repository = "https://github.com/MolCrafts/molrs"
homepage = "https://github.com/MolCrafts/molrs"

[lib]
crate-type = ["cdylib", "rlib"]
name = "molwasm"

[workspace]

[dependencies]
wasm-bindgen = "0.2.108"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
molrs = { path = "../molrs-core", package = "molcrafts-molrs", version = "0.0.6", features = ["zarr"], default-features = false }
molrs-ffi = { path = "../molrs-ffi", package = "molcrafts-molrs-ffi", version = "0.0.6" }
ndarray = "0.17"
zarrs = { version = "0.23", default-features = false }
console_error_panic_hook = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
