[package]
name = "molrs"
version = "0.0.15"
edition = "2024"
authors = ["MolCrafts"]
description = "WASM bindings for molrs"
license = "BSD-3-Clause"
repository = "https://github.com/MolCrafts/molrs"
homepage = "https://github.com/MolCrafts/molrs"

[lib]
crate-type = ["cdylib", "rlib"]
name = "molwasm"

[workspace]

[features]
# Default build = full (all subsystems).
default = ["smiles", "io", "compute", "embed"]
# `smiles` lives inside molrs-io; activating it pulls in molrs-io with the
# matching feature flag.
smiles  = ["dep:molrs-io", "molrs-io/smiles"]
io      = ["dep:molrs-io"]
compute = ["dep:molrs-compute"]
embed   = ["dep:molrs-embed"]

[dependencies]
wasm-bindgen = "0.2.108"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

# Core + FFI handle layer are always compiled (all variants need them).
molrs = { path = "../molrs-core", package = "molcrafts-molrs-core", version = "0.0.15", default-features = false, features = ["zarr"] }
molrs-ffi = { path = "../molrs-ffi", package = "molcrafts-molrs-ffi", version = "0.0.15", default-features = false }

# Optional sub-crates, gated by matching features above.
# `smiles` is hosted inside molrs-io; the `smiles` feature here forwards to
# molrs-io's own `smiles` feature flag.
molrs-io      = { path = "../molrs-io",      package = "molcrafts-molrs-io",      version = "0.0.15", default-features = false, features = ["zarr"], optional = true }
molrs-compute = { path = "../molrs-compute", package = "molcrafts-molrs-compute", version = "0.0.15", default-features = false, optional = true }
molrs-embed   = { path = "../molrs-embed",   package = "molcrafts-molrs-embed",   version = "0.0.15", default-features = false, optional = true }

ndarray = "0.17"
zarrs = { version = "0.23", default-features = false }
console_error_panic_hook = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
