[package]
name = "molrs"
version = "0.1.2"
edition = "2024"
authors = ["MolCrafts"]
description = "WASM bindings for molrs"
license = "BSD-3-Clause"
repository = "https://github.com/MolCrafts/molrs"
homepage = "https://github.com/MolCrafts/molrs"

[lib]
crate-type = ["cdylib", "rlib"]
name = "molwasm"

[workspace]

[features]
# Default build = full (all subsystems). Each forwards to the merged crate's
# matching module feature.
default = ["smiles", "io", "compute", "conformer"]
smiles  = ["io", "molrs/smiles"]
io      = ["molrs/io"]
compute = ["molrs/compute"]
conformer = ["molrs/conformer"]

[dependencies]
wasm-bindgen = "0.2.123"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

# The merged crate (core always on via `zarr`; sub-system modules pulled in by
# the wasm features above) + the FFI handle layer.
molrs = { path = "../molrs", package = "molcrafts-molrs", version = "0.1.2", default-features = false, features = ["zarr"] }
molrs-ffi = { path = "../molrs-ffi", package = "molcrafts-molrs-ffi", version = "0.1.2", default-features = false }

ndarray = "0.17"
zarrs = { version = "0.23", default-features = false }
console_error_panic_hook = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.4", features = ["wasm_js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
