[package]
name = "molcrafts-molrs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Unified façade for the molrs molecular simulation toolkit (core + IO + compute + force fields + SMILES + 3D generation)"
repository.workspace = true
homepage.workspace = true
readme = "../README.md"
keywords = ["molecular-modeling", "chemistry", "simulation", "molecular-dynamics"]
categories = ["science"]

[lib]
name = "molrs"

[features]
default = []
# Full bundle (every sub-crate).
full = ["io", "compute", "smiles", "ff", "embed"]
# Sub-crate features.
io       = ["dep:molrs_io"]
compute  = ["dep:molrs_compute"]
smiles   = ["dep:molrs_smiles"]
ff       = ["dep:molrs_ff"]
embed    = ["dep:molrs_embed"]
# Re-export of molrs-core feature flags.
rayon       = ["molrs/rayon"]
zarr        = ["molrs/zarr", "molrs_io?/zarr"]
filesystem  = ["molrs_io?/filesystem"]
blas        = ["molrs/blas"]

[dependencies]
molrs         = { workspace = true }
molrs_io      = { workspace = true, optional = true }
molrs_compute = { workspace = true, optional = true }
molrs_smiles  = { workspace = true, optional = true }
molrs_ff      = { workspace = true, optional = true }
molrs_embed   = { workspace = true, optional = true }
