[package]
name = "molcrafts-molrs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Unified façade for the molrs molecular simulation toolkit (core + IO + compute + force fields + SMILES + 3D generation)"
repository.workspace = true
homepage.workspace = true
readme = "../README.md"
keywords = ["molecular-modeling", "chemistry", "simulation", "molecular-dynamics"]
categories = ["science"]

[lib]
name = "molrs"

[features]
default = []
# Full bundle (every sub-crate).
full = ["io", "compute", "smiles", "ff", "conformer", "signal"]
# Sub-crate features.
io       = ["dep:molrs_io"]
compute  = ["dep:molrs_compute"]
# `smiles` lives inside molrs-io; activating it pulls in molrs-io with the
# matching feature flag.
smiles   = ["dep:molrs_io", "molrs_io/smiles"]
ff       = ["dep:molrs_ff"]
conformer    = ["dep:molrs_conformer"]
signal   = ["dep:molrs_signal"]
# Re-export of molrs-core feature flags.
rayon       = ["molrs_core/rayon"]
zarr        = ["molrs_core/zarr", "molrs_io?/zarr"]
filesystem  = ["molrs_io?/filesystem"]
blas        = ["molrs_core/blas"]

[dependencies]
# molrs-core is consumed under the local name `molrs_core` (not the workspace
# `molrs` alias): this crate's own lib name is also `molrs`, and a dependency
# named `molrs` makes external integration tests unlinkable (E0464 — two
# `--extern molrs` candidates). It is re-exported at the top-level `molrs::`
# namespace in lib.rs, so the public surface is unchanged for downstream users.
molrs_core    = { path = "../molrs-core", version = "0.1.0", package = "molcrafts-molrs-core", default-features = false }
molrs_io      = { workspace = true, optional = true }
molrs_compute = { workspace = true, optional = true }
molrs_ff      = { workspace = true, optional = true }
molrs_conformer   = { workspace = true, optional = true }
molrs_signal  = { workspace = true, optional = true }
