[package]
name = "molcrafts-molrs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Molecular simulation toolkit: core data structures, IO, trajectory analysis, force fields, SMILES, and 3D conformer generation (feature-gated modules)"
repository.workspace = true
homepage.workspace = true
readme = "../README.md"
keywords = ["molecular-modeling", "chemistry", "simulation", "molecular-dynamics"]
categories = ["science"]
# Tests, benches, and examples are wired explicitly below: integration tests
# gate on the feature their sub-system module needs (so `--all-targets` without
# features skips them instead of failing), and benches/examples have overlapping
# file names across sub-systems. Disable auto-discovery for all three.
autotests = false
autobenches = false
autoexamples = false

# docs.rs builds the public API with every sub-system enabled (`full`), but NOT
# the `blas` feature — that needs a system BLAS/LAPACK the docs.rs sandbox lacks.
[package.metadata.docs.rs]
features = ["full"]

[lib]
name = "molrs"

[dev-dependencies]
criterion = "0.8"
rand = "0.10"
tempfile = "3.0"

[features]
default = ["rayon"]
# Full bundle (every sub-system).
full = ["io", "compute", "smiles", "ff", "conformer", "signal"]

# Sub-system modules (each gates its module + its unique optional deps).
io        = ["dep:flate2", "dep:once_cell"]
# `smiles` lives inside the `io` module.
smiles    = ["io", "dep:petgraph"]
signal    = ["dep:rustfft"]
# `compute` depends on the `signal` module (gets rustfft via it).
compute   = ["signal", "dep:rand"]
ff        = ["dep:rustfft", "dep:roxmltree"]
# `conformer` depends on the `ff` module.
conformer = ["ff", "dep:once_cell", "dep:rand"]

# Core knobs.
rayon      = ["dep:rayon"]
zarr       = ["dep:zarrs"]
filesystem = ["zarr", "zarrs/filesystem"]
blas       = ["dep:ndarray-linalg"]
slow-tests = []

[dependencies]
# Always-on (core foundation).
ndarray    = "0.17"
slotmap    = "1"
smallvec   = "1"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
libm       = "0.2"

# Feature-gated optional deps — a build with a sub-system OFF does not compile
# that sub-system's unique dependency.
rayon          = { version = "1.12", optional = true }                                              # core/ff/compute parallelism (default)
zarrs          = { version = "0.23", optional = true, default-features = false, features = ["ndarray"] }  # zarr trajectories (core+io)
ndarray-linalg = { version = "0.18", optional = true, default-features = true }                     # blas
flate2         = { version = "1.1", optional = true, features = ["rust_backend"] }                  # io (compressed formats)
once_cell      = { version = "1.21", optional = true }                                              # io + conformer
petgraph       = { version = "0.8", optional = true }                                               # smiles (VF2)
rustfft        = { version = "6", optional = true }                                                 # signal + ff + compute
roxmltree      = { version = "0.21", optional = true }                                              # ff (XML force-field readers)
rand           = { version = "0.10", optional = true }                                              # compute + conformer

# ── Integration tests (gated on the sub-system module they exercise) ─────────
[[test]]
name = "core"
path = "tests/core.rs"

[[test]]
name = "test_units"
path = "tests/test_units.rs"

[[test]]
name = "io"
path = "tests/io.rs"
required-features = ["io"]

[[test]]
name = "signal"
path = "tests/signal.rs"
required-features = ["signal"]

[[test]]
name = "compute"
path = "tests/compute.rs"
required-features = ["compute"]

[[test]]
name = "ff"
path = "tests/ff.rs"
required-features = ["ff"]

[[test]]
name = "embed"
path = "tests/embed.rs"
required-features = ["conformer"]

# ── Benches (criterion; auto-discovery off, see [package]) ───────────────────
[[bench]]
name = "core_benchmarks"
path = "benches/core/main.rs"
harness = false

[[bench]]
name = "compute_benchmarks"
path = "benches/compute/main.rs"
harness = false
required-features = ["compute"]

# ── Examples ─────────────────────────────────────────────────────────────────
[[example]]
name = "molgraph_analysis"
path = "examples/molgraph_analysis.rs"

[[example]]
name = "molgraph_building"
path = "examples/molgraph_building.rs"

[[example]]
name = "molgraph_transforms"
path = "examples/molgraph_transforms.rs"

[[example]]
name = "forcefield"
path = "examples/forcefield.rs"
required-features = ["ff"]

[[example]]
name = "typify_litfsi"
path = "examples/typify_litfsi.rs"
required-features = ["ff"]

[[example]]
name = "typify_molecule"
path = "examples/typify_molecule.rs"
required-features = ["ff"]
